	- Fixed up poll() #defines in squid.h (Stewart Forster).
	- Changed poll() timeout from 1000 msec to 50 msec for
	  better performance under low load (Stewart Forster).
	- Changed storeWriteCleanLogs() to write objects in the LRU
	  list order instead of the random hash table order.

Changes to squid-1.2.beta10 (Dec 30, 1997):

	- Fixed content-length bugs for 204 replies, 304 replies,
	  and HEAD requests (Henrik Nordstrom).
	- Fixed errorAppendEntry() bug in gopherReadReply().
	- Basic support for FTP URL typecodes (;type=X).
	- Support for access controls based on ehternet MAC addresses
	  (Dale).
	- Initial URN support; see
	  http://squid.nlanr.net/Squid/urn-support.html
	- Fixed client-side persistent connections for objects with
	  bad content lengths (Henrik Nordstrom).
	- Fixed bad call to storeDirUpdateSwapSize() for objects which
	  never reach SWAPOUT_DONE state.

Changes to squid-1.2.beta8 (Dec 2, 1997):

	- Fixed accessLogLog() to log ident from Proxy-Authorization
	  request header (BoB Miorelli).
	- Fixed #includes, prototypes, etc. in SNMP source files.
	- Moved 'POLLRDNORM' and 'POLLWRNORM' macro checks from
	  include/config.h.in to src/squid.h
	- Moved 'num32' typedefs from src/typedefs.h to
	  include/config.h.in.
	- Moved snmplib/md5.c to lib/md5.c.
	- Added MD5 cache key support.
	- Removed xmalloc() return check in uudeocde.c
	- Added 'ifdef' support to cf_gen.c for optional code (e.g. SNMP)
	- Changed 'client' program to provide easier cache manager access,
	  e.g.:	'client mgr:info'
	- Fixed 'client' to send 'Connection' instead of 'Proxy-Connection'
	  for simulated keep-alive requests.
	- Removed 'fd' arg from clientProcess* functions.
	- Fixed bugs from using errorSend() on persistent/pipelined
	  client connections.  A latter request should not be allowed to
	  write to the client fd until the current request completes.
	  Now use errorAppendEntry() for such situations.
	- Fixed content-length bugs.  We were using content-length == 0